<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Books Reader</string>
    <string name="loading">Loading ...</string>
    <string name="items_title">Cestar College</string>
    <string name="item_pub_date">2014-01-01</string>
    <string name="author">Author</string>
    <string name="genre">Genre</string>
    <string name="price">Price</string>
    <string name="item_title">Item title</string>
    <string name="item_description">Item description</string>
    
</resources>